# kulgadd

./: .gitmodules  CMakeLists.txt  README.md  kulgad-cli.cpp  kulgadd.service.in  main.cc
include/: CellGrid.hh  PinGrid.hh  ScanManager.hh  SerialManager.hh  WebSocketServer.hh  global.hh
src/: CellGrid.cc  PinGrid.cc  ScanManager.cc  SerialManager.cc  WebSocketServer.cc
test/: pico.txt  serial_test.py  test_method.txt  usbcomm_client.py
test/serialtest/: SerialManager.cc  SerialManager.hh  build.sh  main.cc  test_serial
test/wstest/: test_client.py
